test: Add tests and improving code quality